devops-ai-stack-helmified/ingress-nginx/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: { include "ingress-nginx.fullname" . }
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    {- include "ingress-nginx.selectorLabels" . | nindent 4 }
